<resources>
    <string name="app_name">GameReviewApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_signin">Sign In</string>
    <string name="action_signout">Sign Out</string>
    <string name="game_name">Game Name</string>
    <string name="description">Description :</string>
    <string name="rating">100%</string>
    <string name="reviews">(9999) Reviews</string>
    <string name="genre">Genre :</string>
    <string name="platforms">Platforms :</string>
    <string name="developers">Developers :</string>
    <string name="publisher">Publisher :</string>
    <string name="date_20_01_2020">Date: 20/01/2020</string>
    <string name="game_cover">Game Cover</string>
    <string name="age_rating">Age rating</string>
    <string name="green_background">Green background</string>
    <string name="title1">Popular New Games</string>
    <string name="title2">Top Rated PlayStation 4 Games</string>
    <string name="title3">Top Rated XboxOne Games</string>
    <string name="title5">Top Rated Xbox Series X Games</string>
    <string name="title4">Top Rated PlayStation 5 Games</string>
    <string name="year">(2000)</string>
</resources>
