<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/game_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/game_name"
        android:textAllCaps="false"
        android:textColor="@color/TitleColour"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27980536" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="83dp"
        android:layout_height="103dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/green_background"
        android:tint="#04FF00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.39"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal_background" />

    <TextView
        android:id="@+id/game_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/review_count"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/reviews"
        android:textColor="#51000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_rating" />

    <TextView
        android:id="@+id/game_release_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/date_20_01_2020"
        android:textColor="@color/SubTitleColour"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbarDefaultDelayBeforeFade="400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/imageLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/game_image"
                        android:layout_width="180dp"
                        android:layout_height="256dp"
                        android:layout_marginRight="50dp"
                        android:contentDescription="@string/game_cover"
                        app:srcCompat="@drawable/ic_launcher_background"
                        tools:ignore="VectorDrawableCompat" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/age_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/age_rating"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/game_image"
                app:layout_constraintTop_toTopOf="@+id/guideline7"
                app:layout_constraintVertical_bias="0.95" />

            <TextView
                android:id="@+id/game_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/genre"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/game_image" />

            <TextView
                android:id="@+id/game_platforms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/platforms"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/game_genres" />

            <TextView
                android:id="@+id/game_devs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/developers"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/game_platforms" />

            <TextView
                android:id="@+id/game_pub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/publisher"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/game_devs" />

            <TextView
                android:id="@+id/game_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/description"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/game_pub" />

            <Button
                android:id="@+id/comment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-black"
                android:onClick="AddComment"
                android:text="Add Comment"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_desc" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>